--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Каталог — iPhone</title>
+<title>Каталог — iPhone📱</title>
 <style>
   body { background:#000; color:#fff; font-family:Arial,Helvetica,sans-serif; margin:0; padding:20px;}
   .wrap { max-width:1100px; margin:0 auto; }
