--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="grid">
 
     <div class="card">
-      <img src="https://commons.wikimedia.org/wiki/Special:FilePath/IPhone_13.jpg" alt="iPhone 13">
+      <img src="https://yabloki.ua/media/cache/sylius_shop_product_original/36/ba/iphone-13-128-midnight_e9733bb6-5b79-46e9-b163-494ffcdea7cf-1.png.webp">
       <div class="title">iPhone 13</div>
       <div class="variant">128 GB</div><div class="price">900 BYN</div>
       <a class="order" href="https://t.me/your_bot?start=iphone13_128" target="_blank">Заказать в Telegram</a>
